Closed Bug 162482 Opened 23 years ago Closed 22 years ago

Depressed buttons display incorrectly in Jaguar

Categories

(Core :: Layout: Form Controls, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: karppinen, Assigned: mikepinkerton)

Details

Attachments

(1 file)

Chimera/2002080605 renders depressed buttons with a white streak on the middle in Mac OS X 10.2. See the upcoming screenshot.
Added the screenshot.
which build of Jaguar?
Assignee: saari → pinkerton
Blocks: 147975
6C115.
Confirmed.
Status: UNCONFIRMED → NEW
Ever confirmed: true
bizarro.
Status: NEW → ASSIGNED
Target Milestone: --- → Chimera0.5
I filled a bug at apple some time ago (#3009255). If the button is drawn without the focus, it will be drawn correctly.
Target Milestone: Chimera0.5 → Chimera0.6
able to duplicate this in a sample app, working with apple to resolve
fixed on chimera branch.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Component: General → HTML Form Controls
Cool.. Verified in the 2002-09-18-05 NB.
Status: RESOLVED → VERIFIED
No longer blocks: 147975
Reopening for fixing on the trunk. This shows in the Classic skin.
Status: VERIFIED → REOPENED
Component: HTML Form Controls → Layout: Form Controls
Product: Chimera → Browser
Resolution: FIXED → ---
Target Milestone: Chimera0.6 → ---
Version: unspecified → Trunk
leave this resolved. the trunk bug is 162877
Status: REOPENED → RESOLVED
Closed: 23 years ago22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: