Turn off drawing focus rings for Jaguar until bugs in DrawThemeButton in CG contexts are fixed there. (bug 162482)