mozilla/gfx/src/mac/nsNativeThemeMac.cpp
@@ -423,8 +423,13 @@ nsNativeThemeMac::DrawButton ( ThemeButtonKind inKind, const Rect& inBoxRect, PR
                     kThemeStatePressed : kThemeStateActive;
   info.value = inValue;
   info.adornment = inAdornment;
-  if ( inState & NS_EVENT_STATE_FOCUS )    
-    info.adornment = kThemeAdornmentFocus;
+  if ( inState & NS_EVENT_STATE_FOCUS ) {
+    // there is a bug in Jaguar where if we are in a CG context and draw the focus
+    // ring with DrawThemeButton(), there are ugly lines all through the button. This
+    // may get fixed in a dot-release, but until it does, we can't draw the focus ring.
+    if ( !nsRenderingContextMac::OnJaguar() )
+      info.adornment = kThemeAdornmentFocus;
+  }
   if ( inIsDefault )
     info.adornment |= kThemeAdornmentDefault;
 
